styles/sass/main.scss
/* ... */
ol {
  list-style: decimal;
  padding-left: 1.25em;

  li {
    padding-left: 0.25em;
  }
}

/* Actions */

ul.actions {
  list-style: none;
  padding-left: 0;

  li {
    display: inline-block;
    padding-left: 0;
    margin: 0 0 0 0.5em;

    &:first-child {
      margin-left: 0;
    }
  }

  @include breakpoint('<=small') {
    li {
      display: block;
      margin: 0.75em 0 0 0;

      &:first-child {
        margin-top: 0;
      }
    }
  }
}

/* Icons */

.icon {
  position: relative;
  text-decoration: none;

  &:before {
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    //noinspection CssNoGenericFontName
    font-family: "Font Awesome 5 Pro";
    font-style: normal;
    font-weight: 300;
    text-transform: none !important;
  }

  > .label {
    display: none;
  }

  &.brand:before {
    //noinspection CssNoGenericFontName
    font-family: "Font Awesome 5 Brands";
    font-weight: normal;

  }
}

/* Nav */

#nav {
  text-align: center;
  height: 4.25em;
  cursor: default;

  a {
    position: relative;
    display: inline-block;
    color: #ffffff;
    width: 1em;
    height: 1em;
    line-height: 0.9em;
    font-size: 2.5em;
    margin: 0 0.25em 0 0.25em;
    opacity: 0.35;
    outline: 0;
    @include vendor('transition', 'opacity .25s ease-in-out');

    &.icon:before {
      padding-right: 0;
    }

    &:before {
      font-size: 0.8em;
    }

    &:after {
      content: '';
      display: block;
      position: absolute;
      left: 50%;
      bottom: -0.75em;
      margin-left: -0.5em;
      border-bottom: solid 0em #ffffff;
      border-left: solid 0.5em transparent;
      border-right: solid 0.5em transparent;
      @include vendor('transition', 'border-bottom-width .25s ease-in-out');
    }

    span {
      display: block;
      position: absolute;
      background: #222222;
      color: #ffffff;
      top: -2.75em;
      font-size: 0.3em;
      height: 2.25em;
      line-height: 2.25em;
      left: 50%;
      opacity: 0;
      @include vendor('transition', 'opacity .25s ease-in-out');
      // Labels not wide enough? Increase its width below and set margin-left to ((width / 2) * -1)
      width: 5.5em;
      margin-left: -2.75em;

      &:after {
        content: '';
        display: block;
        position: absolute;
        bottom: -0.4em;
        left: 50%;
        margin-left: -0.6em;
        border-top: solid 0.6em #222222;
        border-left: solid 0.6em transparent;
        border-right: solid 0.6em transparent;
      }
    }

    &:hover {
      opacity: 1.0;

      span {
        opacity: 1.0;
      }
    }

    &.active {
      opacity: 1.0;

      &:after {
        border-bottom-width: 0.5em;
      }
    }
  }

  @include breakpoint('<=medium') {
    a {
      span {
        display: none;
      }
    }
  }
}

/* Wrapper */

#wrapper {
  width: 45em;
  margin: 0 auto;
  min-height: 100vh;
  max-width: 100%;
  padding: 4em 0;
  @include vendor('display', 'flex');
  @include vendor('flex-direction', 'column');
  @include vendor('align-items', 'center');
  @include vendor('justify-content', 'center');
  @include vendor('transition', 'opacity 1s ease-in-out');

  body.is-preload & {
    opacity: 0;
  }

  @include breakpoint('<=large') {
    padding: 3em 0;
    max-width: calc(100% - 6em);
  }

  @include breakpoint('<=medium') {
    padding: 1.5em 0;
    max-width: calc(100% - 8em);
  }

  @include breakpoint('<=small') {
    padding: 1em 0;
    max-width: calc(100% - 2em);
  }

  @include breakpoint('<=xsmall') {
    padding: 1em 0;
    max-width: 100%;
  }
}
/* ... */

